--- a/app/src/main/res/anim/enter_from_right.xml
+++ b/app/src/main/res/anim/enter_from_right.xml
@@ -2,9 +2,9 @@
 <set xmlns:android="http://schemas.android.com/apk/res/android">
 
     <translate
-        android:duration="400"
-        android:fromXDelta="0%"
+        android:duration="@integer/animation_duration"
+        android:fromXDelta="100%"
         android:fromYDelta="0%"
-        android:toXDelta="100%"
+        android:toXDelta="0%"
         android:toYDelta="0%" />
 </set>
