--- a/app/src/main/res/values-land/dimens.xml
+++ b/app/src/main/res/values-land/dimens.xml
@@ -1,3 +1,5 @@
 <resources>
     <dimen name="fab_margin">48dp</dimen>
+    <dimen name="progress_bar_diameter">60dp</dimen>
+    <dimen name="dialog_corner_radius">15dp</dimen>
 </resources>
