--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,10 +1,33 @@
-<resources
-    xmlns:tools="http://schemas.android.com/tools">
+<resources>
     <!-- Base application theme. -->
     <style name="Theme.BaseProject" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
-        <!-- Status bar color. -->
-        <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimaryVariant</item>
-        <!-- Customize your theme here. -->
+
+        <!-- Represent the colors of your brand. -->
+        <item name="colorPrimary">@color/colorPrimary</item>
+        <item name="colorSecondary">@color/colorSecondary</item>
+
+        <!--    Lighter or darker shades of your brand colors-->
+        <item name="colorPrimaryVariant">@color/colorPrimaryVariant</item>
+        <item name="colorSecondaryVariant">@color/colorSecondaryVariant</item>
+
+        <item name="colorPrimaryDark">@color/colorPrimaryVariant</item>
+
+        <!--    Used for “sheets” of material (like cards and bottom sheets)-->
+        <item name="colorSurface">@color/colorSurface</item>
+
+        <!--    For errors and warnings-->
+        <item name="colorError">@color/colorError</item>
+
+        <!--    “On” colors are used to tint foreground content (such as text and icons)-->
+        <item name="colorOnPrimary">@color/colorOnPrimary</item>
+        <item name="colorOnSecondary">@color/colorOnSecondary</item>
+        <item name="colorOnSurface">@color/colorOnSurface</item>
+        <item name="android:colorBackground">@color/colorBackground</item>
+        <item name="colorOnBackground">@color/colorOnBackground</item>
+        <item name="colorOnError">@color/colorOnError</item>
+
+        <!--    Customize the App theme-->
+        <item name="materialAlertDialogTheme">@style/DialogStyle_RoundedCorners</item>
     </style>
 
     <style name="Theme.BaseProject.NoActionBar">
