--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
-<resources xmlns:ns2="http://schemas.android.com/tools">
+<resources
+    xmlns:ns2="http://schemas.android.com/tools">
 
-    <!--    Dialog-->
+    <!--    Dialog. Rounded corners-->
     <style name="DialogStyle_RoundedCorners" parent="ThemeOverlay.MaterialComponents.MaterialAlertDialog">
         <item name="shapeAppearanceOverlay">
             @style/ShapeAppearanceOverlay.MaterialAlertDialog.Rounded
@@ -12,12 +13,29 @@
         <item name="cornerSize">@dimen/dialog_corner_radius</item>
     </style>
 
-    <!--    BottomSheet-->
+<!--    TODO: check colors-->
+    <!--    BottomSheet. System bars color-->
     <style name="BottomSheet_SystemBarsStyle" parent="Theme.MaterialComponents.Light.BottomSheetDialog">
         <item name="android:windowIsFloating">false</item>
-        <item name="android:statusBarColor">@color/colorSurface</item>
+        <item name="android:statusBarColor">@color/colorPrimaryVariant</item>
         <item name="android:navigationBarColor">@color/colorSurface</item>
         <item name="android:windowLightNavigationBar" ns2:targetApi="o_mr1">true</item>
         <item name="android:layout_height">match_parent</item>
+    </style>
+
+    <!--    BottomSheet. Transparent background-->
+    <style name="MenuBottomSheetStyle" parent="Theme.MaterialComponents.Light.BottomSheetDialog">
+        <item name="bottomSheetStyle">@style/TransparentBackground</item>
+        <item name="android:maxWidth">640dp</item>
+    </style>
+
+    <style name="TransparentBackground" parent="Widget.Design.BottomSheet.Modal">
+        <item name="android:background">@android:color/transparent</item>
+    </style>
+
+    <!--    ImageView. Circle-->
+    <style name="CircleImageViewStyle" parent="ShapeAppearance.MaterialComponents.MediumComponent">
+        <item name="cornerFamily">rounded</item>
+        <item name="cornerSize">50%</item>
     </style>
 </resources>
