--- a/app/src/main/res/navigation/nav_graph_main.xml
+++ b/app/src/main/res/navigation/nav_graph_main.xml
@@ -7,6 +7,12 @@
     app:startDestination="@id/breakingNewsFragment">
 
     <fragment
+        android:id="@+id/signInFragment"
+        android:name="com.olgabakhur.baseproject.presentation.ui.signIn.SignInFragment"
+        android:label="@string/sign_in_label_toolbar"
+        tools:layout="@layout/fragment_sign_in"/>
+
+    <fragment
         android:id="@+id/breakingNewsFragment"
         android:name="com.olgabakhur.baseproject.presentation.ui.breakingNews.BreakingNewsFragment"
         android:label="@string/breaking_news_label_toolbar"
@@ -55,6 +61,6 @@
         tools:layout="@layout/fragment_article">
         <argument
             android:name="article"
-            app:argType="com.olgabakhur.data.model.news.Article" />
+            app:argType="com.olgabakhur.data.model.news.pojo.Article" />
     </fragment>
 </navigation>
