--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -30,8 +30,8 @@
     <androidx.fragment.app.FragmentContainerView
         android:id="@+id/navHostFragment"
         android:name="androidx.navigation.fragment.NavHostFragment"
-        android:layout_width="@dimen/zero"
-        android:layout_height="@dimen/zero"
+        android:layout_width="@dimen/dimen_0"
+        android:layout_height="@dimen/dimen_0"
         app:defaultNavHost="true"
         app:navGraph="@navigation/nav_graph_main"
         app:layout_constraintStart_toStartOf="parent"
