--- a/app/src/main/res/drawable/ic_sign_out.xml
+++ b/app/src/main/res/drawable/ic_sign_out.xml
@@ -1,7 +1,7 @@
 <vector
     xmlns:android="http://schemas.android.com/apk/res/android"
-    android:width="24dp"
-    android:height="24dp"
+    android:width="@dimen/clickable_icon_content_size_small"
+    android:height="@dimen/clickable_icon_content_size_small"
     android:viewportWidth="24"
     android:viewportHeight="24"
     android:tint="?attr/colorControlNormal"
