--- a/app/src/main/res/navigation/nav_graph_main.xml
+++ b/app/src/main/res/navigation/nav_graph_main.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<navigation
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<navigation xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/nav_graph_main"
@@ -19,36 +18,12 @@
     <fragment
         android:id="@+id/breakingNewsFragment"
         android:name="com.olgabakhur.baseproject.presentation.ui.breakingNews.BreakingNewsFragment"
-        android:label="@string/breaking_news_label_toolbar"
-        tools:layout="@layout/fragment_breaking_news">
-        <action
-            android:id="@+id/action_breakingNewsFragment_to_articleFragment"
-            app:destination="@id/articleFragment"
-            app:popEnterAnim="@anim/enter_from_left"
-            app:popExitAnim="@anim/exit_to_right" />
-    </fragment>
+        android:label="@string/toolbar_title_breaking_news"
+        tools:layout="@layout/fragment_breaking_news" />
 
     <fragment
         android:id="@+id/savedNewsFragment"
         android:name="com.olgabakhur.baseproject.presentation.ui.savedNews.SavedNewsFragment"
-        android:label="@string/saved_news_label_toolbar"
-        tools:layout="@layout/fragment_saved_news">
-        <action
-            android:id="@+id/action_savedNewsFragment_to_articleFragment"
-            app:destination="@id/articleFragment"
-            app:enterAnim="@anim/enter_from_right"
-            app:exitAnim="@anim/exit_to_left"
-            app:popEnterAnim="@anim/enter_from_left"
-            app:popExitAnim="@anim/exit_to_right" />
-    </fragment>
-
-    <fragment
-        android:id="@+id/articleFragment"
-        android:name="com.olgabakhur.baseproject.presentation.ui.article.ArticleFragment"
-        android:label="@string/article_details_label_toolbar"
-        tools:layout="@layout/fragment_article">
-        <argument
-            android:name="article"
-            app:argType="com.olgabakhur.data.model.news.pojo.Article" />
-    </fragment>
+        android:label="@string/toolbar_title_saved_news"
+        tools:layout="@layout/fragment_saved_news" />
 </navigation>
