--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,19 +1,29 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#006064</color>
-    <color name="colorSecondary">#FF9800</color>
+    <color name="colorPrimary">#356859</color>
+    <color name="colorSecondary">#FD5523</color>
 
-    <color name="colorPrimaryVariant">#014447</color>
-    <color name="colorSecondaryVariant">#FF5722</color>
+    <color name="colorPrimaryVariant">#214037</color>
+    <color name="colorSecondaryVariant">#BD3D17</color>
 
-    <color name="colorSurface">#FFFFFF</color>
-    <color name="colorBackground">#FFFFFF</color>
+    <color name="colorSurface">#EFEBE9</color>
+    <color name="colorBackground">#FFFBE6</color>
 
-    <color name="colorError">#FF0303</color>
+    <color name="colorError">#7E0303</color>
 
-    <color name="colorOnPrimary">#FFFFFF</color>
-    <color name="colorOnSecondary">#FFFFFF</color>
-    <color name="colorOnSurface">#000000</color>
-    <color name="colorOnBackground">#000000</color>
+    <color name="colorOnPrimary">#EFEBE9</color>
+    <color name="colorOnSecondary">#EFEBE9</color>
+    <color name="colorOnSurface">#356859</color>
+    <color name="colorOnBackground">#356859</color>
     <color name="colorOnError">#FFFFFF</color>
+
+    <color name="colorRipple">#66000000</color>
+
+    <!--    News viewHolder-->
+    <color name="primaryNeutral">#FFFFFF</color>
+    <color name="subsidiaryNeutral">#A3A3A3</color>
+
+    <color name="headerText">#214037</color>
+    <color name="bodyText">#B3214037</color>
+    <color name="metaDataText">#80214037</color>
 </resources>
