--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,7 +1,22 @@
 <resources>
     <dimen name="dimen_0">0dp</dimen>
+    <dimen name="dimen_1">1dp</dimen>
     <dimen name="dimen_5">5dp</dimen>
+    <dimen name="dimen_6">6dp</dimen>
+    <dimen name="dimen_8">8dp</dimen>
+    <dimen name="dimen_12">12dp</dimen>
+    <dimen name="dimen_16">16dp</dimen>
 
-    <dimen name="fab_margin">16dp</dimen>
+    <!--    Test-->
+    <dimen name="header_text">21dp</dimen>
+    <dimen name="body_text">17dp</dimen>
+    <dimen name="meta_data_text">15dp</dimen>
+    <!--    Dialog-->
     <dimen name="dialog_corner_radius">10dp</dimen>
+    <!--    CardView-->
+    <dimen name="card_elevation">4dp</dimen>
+    <dimen name="card_corner_radius">10dp</dimen>
+    <!--    Clickable icon-->
+    <dimen name="clickable_icon_diameter_small">40dp</dimen>
+    <dimen name="clickable_icon_content_size_small">24dp</dimen>
 </resources>
