--- a/app/src/main/res/values/integers.xml
+++ b/app/src/main/res/values/integers.xml
@@ -2,4 +2,5 @@
 <resources>
     <!--    Animation -->
     <integer name="animation_duration">400</integer>
+    <integer name="ellipsize_marquee_repeat_limit">0</integer>
 </resources>
