--- a/app/src/main/res/menu/menu_toolbar.xml
+++ b/app/src/main/res/menu/menu_toolbar.xml
@@ -4,15 +4,27 @@
     tools:context="com.olgabakhur.baseproject.presentation.ui.MainActivity">
 
     <item
-        android:id="@+id/savedNewsFragment"
-        android:title="@string/toolbar_title_saved_news"
-        android:visible="true"
-        app:showAsAction="never"/>
+        android:id="@+id/actionFilter"
+        android:icon="@drawable/ic_filter"
+        android:title="@string/general_filter"
+        android:visible="false"
+        app:showAsAction="always">
+
+        <menu>
+            <item
+                android:id="@+id/showBreakingNews"
+                android:title="@string/breaking_news_label" />
+
+            <item
+                android:id="@+id/showSavedNews"
+                android:title="@string/saved_news_label" />
+        </menu>
+    </item>
 
     <item
         android:id="@+id/actionSignOut"
+        android:icon="@drawable/ic_sign_out"
         android:title="@string/general_sign_out"
         android:visible="true"
-        android:icon="@drawable/ic_sign_out"
-        app:showAsAction="always"/>
+        app:showAsAction="always" />
 </menu>
