rename packages to lower case

--- a/app/src/main/res/layout/fragment_sign_in.xml
+++ b/app/src/main/res/layout/fragment_sign_in.xml
@@ -5,7 +5,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.olgabakhur.baseproject.presentation.ui.signIn.SignInFragment">
+    tools:context="com.olgabakhur.baseproject.presentation.ui.signin.SignInFragment">
 
     <com.google.android.material.textview.MaterialTextView
         android:id="@+id/tvSignInStatus"
