--- a/app/src/main/res/navigation/nav_graph_main.xml
+++ b/app/src/main/res/navigation/nav_graph_main.xml
@@ -7,7 +7,7 @@
 
     <fragment
         android:id="@+id/signInFragment"
-        android:name="com.olgabakhur.baseproject.presentation.ui.signIn.SignInFragment"
+        android:name="com.olgabakhur.baseproject.presentation.ui.signin.SignInFragment"
         android:label="@string/app_name"
         tools:layout="@layout/fragment_sign_in">
         <action
@@ -17,7 +17,7 @@
 
     <fragment
         android:id="@+id/breakingNewsFragment"
-        android:name="com.olgabakhur.baseproject.presentation.ui.breakingNews.BreakingNewsFragment"
+        android:name="com.olgabakhur.baseproject.presentation.ui.breakingnews.BreakingNewsFragment"
         android:label="@string/breaking_news_label"
         tools:layout="@layout/fragment_breaking_news" />
 </navigation>
