--- a/app/src/main/res/layout/view_holder_article.xml
+++ b/app/src/main/res/layout/view_holder_article.xml
@@ -20,7 +20,7 @@
             android:singleLine="true"
             android:marqueeRepeatLimit="@integer/ellipsize_marquee_repeat_limit"
             tools:text="Title"
-            style="@style/HeaderText_Style"
+            style="@style/HeaderSmall_Style"
             android:layout_marginHorizontal="@dimen/dimen_16"
             android:layout_marginTop="@dimen/dimen_16"
             app:layout_constraintStart_toStartOf="parent"
@@ -36,7 +36,7 @@
             android:marqueeRepeatLimit="@integer/ellipsize_marquee_repeat_limit"
             android:singleLine="true"
             tools:text="Source"
-            style="@style/BodyText_Style"
+            style="@style/BodySmall_Style"
             android:layout_marginHorizontal="@dimen/dimen_16"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/tvTitle"
@@ -48,7 +48,7 @@
             android:layout_width="match_parent"
             android:layout_height="@dimen/dimen_0"
             app:layout_constraintDimensionRatio="1.6"
-            android:background="@color/subsidiaryNeutral"
+            android:background="@color/secondaryNeutral"
             android:src="@drawable/ic_news_image_preloader"
             tools:src="@drawable/ic_news_image_error"
             android:scaleType="centerCrop"
@@ -66,7 +66,7 @@
             android:ellipsize="end"
             android:maxLines="3"
             tools:text="Description"
-            style="@style/BodyText_Style"
+            style="@style/BodySmall_Style"
             android:layout_marginHorizontal="@dimen/dimen_16"
             android:layout_marginTop="@dimen/dimen_16"
             app:layout_constraintStart_toStartOf="parent"
@@ -79,7 +79,7 @@
             android:layout_width="@dimen/dimen_0"
             android:layout_height="wrap_content"
             tools:text="Content"
-            style="@style/BodyText_Style"
+            style="@style/BodySmall_Style"
             android:layout_marginHorizontal="@dimen/dimen_16"
             android:layout_marginTop="@dimen/dimen_16"
             app:layout_constraintStart_toStartOf="parent"
@@ -94,7 +94,7 @@
             android:layout_width="@dimen/dimen_0"
             android:layout_height="wrap_content"
             tools:text="Published at"
-            style="@style/MetaDataText_Style"
+            style="@style/BodySmall_Style"
             android:ellipsize="marquee"
             android:singleLine="true"
             android:marqueeRepeatLimit="@integer/ellipsize_marquee_repeat_limit"
@@ -110,9 +110,9 @@
             android:layout_width="@dimen/clickable_icon_diameter_small"
             android:layout_height="@dimen/clickable_icon_diameter_small"
             android:src="@drawable/ic_saved"
-            android:tint="@color/subsidiaryNeutral"
+            android:tint="@color/secondaryNeutral"
             tools:tint="@color/colorSecondary"
-            android:foreground="@drawable/ripple_mask_oval"
+            android:foreground="@drawable/ripple_mask_oval_primary"
             android:clickable="true"
             android:focusable="true"
             android:checkable="true"
