--- a/app/src/main/res/drawable/ripple_mask_oval_primary.xml
+++ b/app/src/main/res/drawable/ripple_mask_oval_primary.xml
@@ -1,12 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <ripple
     xmlns:android="http://schemas.android.com/apk/res/android"
-    android:color="@color/colorRipple">
+    android:color="@color/colorRipplePrimary">
     <item
         android:id="@android:id/mask">
         <shape
             android:shape="oval">
-            <solid android:color="@color/colorRipple" />
+            <solid android:color="@color/colorRipplePrimary" />
         </shape>
     </item>
 </ripple>
