--- a/app/src/main/res/layout/fragment_breaking_news.xml
+++ b/app/src/main/res/layout/fragment_breaking_news.xml
@@ -4,7 +4,9 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:layout_marginBottom="?attr/actionBarSize"
+    tools:context="com.olgabakhur.baseproject.presentation.ui.breakingnews.BreakingNewsFragment">
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rvBreakingNews"
