--- a/app/src/main/res/values-land/dimens.xml
+++ b/app/src/main/res/values-land/dimens.xml
@@ -1,3 +1,6 @@
 <resources>
     <dimen name="dialog_corner_radius">15dp</dimen>
+
+    <dimen name="max_width_full_screen">800dp</dimen>
+    <dimen name="max_width_half_screen">396dp</dimen>
 </resources>
