--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -25,5 +25,15 @@
         <item name="android:colorBackground">@color/colorBackground</item>
         <item name="colorOnBackground">@color/colorOnBackground</item>
         <item name="colorOnError">@color/colorOnError</item>
+
+        <!--    Customize the App theme-->
+        <item name="materialAlertDialogTheme">@style/DialogStyle_RoundedCorners</item>
+        <item name="circularProgressIndicatorStyle">@style/CircularProgressIndicator_Style</item>
+        <item name="materialCardViewStyle">@style/CardView_Style</item>
+        <item name="toolbarStyle">@style/Toolbar_Style</item>
+        <item name="android:itemTextAppearance">@style/PopupMenuTextAppearance</item>
+        <item name="android:statusBarColor">@color/colorBackground</item>
+        <item name="textInputStyle">@style/InputLayout_Style</item>
+        <item name="materialButtonStyle">@style/ButtonPrimary_Style</item>
     </style>
 </resources>
