--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,29 +1,37 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#356859</color>
-    <color name="colorSecondary">#FD5523</color>
+    <!--    Theme colors-->
+    <color name="colorPrimary">#3188DB</color>
+    <color name="colorSecondary">#00BCD4</color>
 
-    <color name="colorPrimaryVariant">#214037</color>
-    <color name="colorSecondaryVariant">#BD3D17</color>
+    <color name="colorPrimaryVariant">#2E7FCC</color>
+    <color name="colorSecondaryVariant">#00ACC1</color>
 
-    <color name="colorSurface">#EFEBE9</color>
-    <color name="colorBackground">#FFFBE6</color>
+    <color name="colorBackground">#FFFFFF</color>
+    <color name="colorSurface">#FFFFFF</color>
+    <color name="colorSurfaceDisabled">#EEEEEE</color>
 
-    <color name="colorError">#7E0303</color>
+    <color name="colorError">#B00020</color>
 
-    <color name="colorOnPrimary">#EFEBE9</color>
-    <color name="colorOnSecondary">#EFEBE9</color>
-    <color name="colorOnSurface">#356859</color>
-    <color name="colorOnBackground">#356859</color>
+    <color name="colorOnPrimary">#FFFFFF</color>
+    <color name="colorOnSecondary">#000000</color>
+    <color name="colorOnBackground">#000000</color>
+    <color name="colorOnSurface">#000000</color>
     <color name="colorOnError">#FFFFFF</color>
 
-    <color name="colorRipple">#66000000</color>
+    <!--    Alpha-->
+    <color name="colorPrimaryAlpha50">#803188DB</color>
 
-    <!--    News viewHolder-->
+    <!--    Button. Primary-->
+    <color name="colorRipplePrimary">#66000000</color>
+    <color name="colorRippleSecondary">#66FFFFFF</color>
+
+    <!--    Vector images-->
     <color name="primaryNeutral">#FFFFFF</color>
-    <color name="subsidiaryNeutral">#A3A3A3</color>
+    <color name="secondaryNeutral">#33000000</color>
 
-    <color name="headerText">#214037</color>
-    <color name="bodyText">#B3214037</color>
-    <color name="metaDataText">#80214037</color>
+    <!--    Text-->
+    <color name="headerText">#000000</color>
+    <color name="bodyText">#B3000000</color>
+    <color name="subtitleText">#80000000</color>
 </resources>
